--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
