--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "infocheckbox",
     "leavereport",
     "Mediclaim",
+    "PENDINGAGREEMENT",
     "reduxjs",
     "sonarqube",
     "Statusvalue",
