--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "infocheckbox",
     "leavereport",
     "Mediclaim",
+    "Productreducer",
     "reduxjs",
     "sonarqube",
     "Statusvalue",
