--- a/package.json
+++ b/package.json
@@ -24,18 +24,16 @@
   },
   "dependencies": {
     "@coreui/chartjs": "^3.0.0",
-    "@coreui/coreui": "^4.2.0",
     "@coreui/coreui-pro": "^4.0.4",
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "2.0.0",
-    "@coreui/react-chartjs": "^2.1.0",
+    "@coreui/react-chartjs": "2.0.0",
     "@coreui/react-pro": "4.0.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.1",
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -44,8 +42,8 @@
     "@types/draft-js": "^0.11.9",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/html-to-draftjs": "^1.4.0",
-    "@types/http-proxy-middleware": "^1.0.0",
     "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
     "@types/react-autocomplete": "^1.8.6",
     "@types/react-cropper": "^1.3.2",
     "@types/react-datepicker": "^4.4.1",
@@ -57,9 +55,7 @@
     "@typescript-eslint/parser": "^5.30.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
-    "caniuse-lite": "^1.0.30001439",
     "ckeditor4-react": "^3.1.0",
-    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -70,13 +66,10 @@
     "eslint-plugin-sonarjs": "^0.13.0",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
-    "fusioncharts": "^3.19.0",
-    "fusionmaps": "^3.18.0",
     "history": "^5.3.0",
     "html-react-parser": "^1.4.12",
     "html-to-draftjs": "^1.5.0",
-    "http-proxy-middleware": "^2.0.6",
-    "moment": "^2.29.4",
+    "moment": "^2.29.3",
     "msw": "^0.39.2",
     "multiselect-react-dropdown": "^2.0.22",
     "prop-types": "^15.8.1",
@@ -87,8 +80,6 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-excel-renderer": "^1.1.0",
-    "react-fusioncharts": "^4.0.0",
     "react-icons": "^4.4.0",
     "react-idle-timer": "^5.1.3",
     "react-moment": "^1.1.2",
@@ -101,7 +92,6 @@
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "simplebar-react": "^2.3.5",
-    "start": "^5.1.0",
     "typescript": "^4.1.2",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
@@ -110,7 +100,6 @@
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.5.0",
     "@types/qs": "^6.9.7",
-    "@types/react": "^18.2.11",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-router-dom": "^5.1.8",
     "auto-changelog": "~2.3.0",
