--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "start": "^5.1.0",
     "typescript": "^4.1.2",
     "validator": "^13.7.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
