--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-time-picker": "^6.2.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
