--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 
                         <configuration>
                             <environmentVariables>
-                                <PUBLIC_URL>https://ovhqaapi.raybiztech.com</PUBLIC_URL>
+                                <PUBLIC_URL>https://ovhqa2.raybiztech.com</PUBLIC_URL>
                                 <REACT_APP_ROUTER_BASE>/</REACT_APP_ROUTER_BASE>
                                 <REACT_APP_API_BASE>https://ovhqaapi.raybiztech.com</REACT_APP_API_BASE>
                                 <REACT_APP_IDLE_TIMEOUT>300000</REACT_APP_IDLE_TIMEOUT>
@@ -139,7 +139,7 @@
 
                         <configuration>
                             <environmentVariables>
-                                <PUBLIC_URL>https://ovhqaapi.raybiztech.com</PUBLIC_URL>
+                                <PUBLIC_URL>https://ovhq2.raybiztech.com</PUBLIC_URL>
                                 <REACT_APP_ROUTER_BASE>/</REACT_APP_ROUTER_BASE>
                                 <REACT_APP_API_BASE>https://ovhqapi.raybiztech.com</REACT_APP_API_BASE>
                                 <REACT_APP_IDLE_TIMEOUT>300000</REACT_APP_IDLE_TIMEOUT>
