--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.5.0",
     "@types/qs": "^6.9.7",
